methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return true;
  ^