methods.returning.MethodsReturning.scala.code
if(true || false) forward();
def haveBaggle():Bool{
  return true;
}